<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="APP_VER" translatable="false">V1.1.2017.07.15</string>

    <string name="add_conn_guide">Switches and the app communicate to each other via a MQTT broker. User is not required to setup connection to other MQTT broker if using a default broker.</string>
    <string name="conn_name">Connection Name</string>
    <string name="conn_name_guide">Should be an easy to remember name</string>
    <string name="conn_url">URL to MQTT broker</string>
    <string name="conn_url_guide">Ex, tcp://iot.eclipse.org:1883</string>
    <string name="conn_user">Username required by MQTT broker</string>
    <string name="conn_user_guide">Leave blank if not required</string>
    <string name="conn_password">Password required by MQTT broker</string>
    <string name="conn_password_guide">Leave blank if not required</string>
    <string name="custom_conn_button">CHANGE MQTT BROKER</string>

    <string name="app_name">AiOhTea Collection</string>
    <string name="action_setingup_devices">Setup device</string>
    <string name="button">Button</string>
    <string name="add_switch">ADD SWITCH</string>
    <string name="add_switch_guide">
        1.Enter ID and Description of a switch that will be/was attached to network\n
        2.Press ADD SWITCH button to add the switch to your device collection.
    </string>
    <string name="switch_desc_box">Switch Description</string>
    <string name="switch_desc_guide">Such as \"Irrigation system\"</string>
    <string name="switch_id_box">Switch Name</string>
    <string name="switch_password_box">Switch Password</string>
    <string name="action_about" translatable="false">About</string>
    <string name="about_text">IoT makes life easy and enjoyable like having tea.</string>
    <string name="wait_msg">Processing..., please wait!</string>

    <string name="custom_conn_menu_item">Custom connection</string>

    <string name="dev_details_menu_item">Device\'s details</string>
    <string name="delete_dev_menu_item">Delete device</string>

    <!--> DEVIVE INFO </!-->
    <string name="dev_offline_notsynced">"Device is offline or not synced!"</string>

    <!--> OTHER INFO </!-->
    <string name="confirm_dialog_title">"Confirmation"</string>
    <string name="confirm_1">"Do you want to ACTIVATE device's timers?"</string>
    <string name="confirm_2">"Do you want to DEACTIVATE device's timers?"</string>
    <string name="confirm_3">"Do you want to DELETE device: "</string>


    <!--> SWITCH STATUS</!-->
    <string name="sw_on">"ON at"</string>
    <string name="sw_off">"OFF at"</string>
    <string name="sw_off_line">"OFFLINE"</string>
    <string name="sw_unknown">"Tap to find the switch"</string>

    <!--> SWITCH CONTROL MESSAGES</!-->
    <string name="sw_conn_ok">"Successfully establishing connection"</string>
    <string name="sw_conn_err">"Error in establishing connection"</string>
    <string name="sw_subcribe_ok">"Listening switch's status"</string>
    <string name="sw_subcribe_err">"Error in listening switch"</string>
    <string name="sw_cmd_sent">"Command sent"</string>
    <string name="sw_cmd_err">"Command sent error"</string>
    <string name="sw_offline_err">"Switch offline, could not send command"</string>

    <!--> SWITCH SETUP</!-->
    <string name="setup_switch_guide_1">Should be an easy to remember name</string>
    <string name="setup_switch_guide_1_1">Password to access the switch</string>
    <string name="setup_switch_guide_2">WiFi access point name where the switch will connect to</string>
    <string name="setup_switch_guide_3">WiFi password to access to WiFi access point</string>

    <string name="setup_switch">SETUP SWITCH</string>
    <string name="wifi_ssid_box">WiFi SSID</string>
    <string name="wifi_password_box">WiFi password</string>
    <string name="option_check_box">Add new switch to device list</string>
    <string name="can_not_be_empty">can not be empty.</string>


    <!--> TIMER SETTINGS </!-->
    <string name="interval_settings_title">Interval settings</string>
    <string name="timer_settings_title">Timer settings</string>
    <string name="on_every">On after:</string>
    <string name="off_every">Off after:</string>
    <string name="on_at">On at:</string>
    <string name="off_at">Off at:</string>
    <string name="sec_text">sec(s)</string>
    <string name="timer_name_1">Timer 1</string>
    <string name="timer_name_2">Timer 2</string>
    <string name="timer_name_3">Timer 3</string>
    <string name="setup_button">Setup</string>
    <string name="cancel_button">Cancel</string>

    <string name="interval_settings_guide">The device will be started after n seconds since last stop
    and stopped m seconds since last start.
        If the device has been started/stopped manually before, corresponding timer will be bypassed.</string>

    <string name="timer_settings_guide">The device will be started/stopped at specific times.
    If the device has been started/stopped manually before, corresponding timer will be bypassed.</string>
    <string name="action_adding_switch">Add Switch</string>
    <string name="action_setting_timers">Set timers</string>
    <string name="action_custom_conn">Custom connection</string>
</resources>
