<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_collapseParallaxMultiplier="1.0">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="30dp"
        app:srcCompat="@mipmap/aiohtea_sw_on" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/switch_id_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/switch_id_box"
        android:inputType="text"
        android:maxLength="32"
        android:text="ASWITCH0001"
        android:textColor="@android:color/holo_blue_dark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/switch_desc_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/switch_desc_box"
        android:inputType="textPersonName"
        android:text="Move around switch."
        android:textSize="15sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/switch_adding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addSwitchOnClick"
        android:paddingTop="10dp"
        android:text="@string/add_switch" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_switch_guide"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

</LinearLayout>