<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_collapseParallaxMultiplier="1.0">

    <ImageView
        android:id="@+id/sw_logo_icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="10dp"
        app:srcCompat="@mipmap/aiohtea_conn_logo" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/add_conn_guide"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:text="@string/conn_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:text="@string/conn_name_guide"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/conn_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conn_name"
        android:inputType="textPersonName|textFilter"
        android:maxLength="32"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:text="@string/conn_url"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:text="@string/conn_url_guide"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/conn_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conn_url"
        android:inputType="textPersonName|textFilter"
        android:maxLength="160"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:text="@string/conn_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:text="@string/conn_user_guide"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/conn_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conn_user"
        android:inputType="textPersonName|textFilter"
        android:maxLength="32"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:text="@string/conn_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:text="@string/conn_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/switch_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conn_password"
        android:inputType="textPassword|textVisiblePassword"
        android:maxLength="32"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/custom_conn_adding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customConnAddingOnClick"
        android:paddingTop="10dp"
        android:text="@string/custom_conn_button" />
</LinearLayout>
</ScrollView>