<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/timer_on_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/interval_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/interval_icon"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/interval_title"
        android:layout_toStartOf="@+id/interval_title" />

    <TextView
        android:id="@+id/interval_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingTop="10dp"
        android:text="@string/interval_settings_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/logo"
        android:layout_alignEnd="@+id/timer_title" />

    <TextView
        android:id="@+id/interval_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interval_title"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/interval_settings_guide"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/interval_group_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:gravity="center|center_vertical"
        android:layout_below="@+id/interval_guide"
        android:layout_alignParentStart="true">

        <CheckBox
            android:id="@+id/interval_on_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_every"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/on_every_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:hint="123"
            android:textAlignment="center"
            tools:ignore="HardcodedText,LabelFor" />

        <TextView
            android:id="@+id/secs_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_text"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/interval_group_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="00dp"
        android:gravity="center|center_vertical"
        android:layout_below="@+id/interval_group_1"
        android:layout_alignParentStart="true">

        <CheckBox
            android:id="@+id/interval_off_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_every"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/off_every_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:hint="456"
            android:textAlignment="center"
            tools:ignore="HardcodedText,LabelFor" />

        <TextView
            android:id="@+id/secs_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_text"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/timer_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/timer_icon"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/interval_group_2"
        android:layout_toStartOf="@+id/timer_title" />

    <TextView
        android:id="@+id/timer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/interval_group_2"
        android:paddingBottom="0dp"
        android:paddingTop="10dp"
        android:text="@string/timer_settings_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_title"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/timer_settings_guide"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/timer_group_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_guide"
        android:paddingBottom="5dp"
        android:gravity="center|center_vertical">

        <CheckBox
            android:id="@+id/timer_1_on_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_at"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/on_at_value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="10:30"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/timer_1_off_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_at"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/off_at_value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="15:05"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_group_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_group_1"
        android:paddingBottom="5dp"
        android:gravity="center|center_vertical">

        <CheckBox
            android:id="@+id/timer_2_on_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_at"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/on_at_value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="10:30"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/timer_2_off_enable"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_at"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/off_at_value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="15:05"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_group_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_group_2"
        android:gravity="center|center_vertical">

        <CheckBox
            android:id="@+id/timer_3_on_enable"
            android:layout_width= "wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_at"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/on_at_value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="10:30"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>


        <CheckBox
            android:id="@+id/timer_3_off_enable"
            android:layout_width= "wrap_content"
            android:layout_height="20dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_at"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/off_at_value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="15:05"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:onClick="onClick"/>
    </LinearLayout>

    <Button
        android:id="@+id/setup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer_group_3"
        android:layout_marginTop="20dp"
        android:text="@string/setup_button" />

</RelativeLayout>
