<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    <!---android:background="#A6D785"-->

    <TextView
        android:id="@+id/item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        tools:ignore="RelativeOverlap,RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@android:color/holo_green_light"
        android:layout_below="@id/item_status"/>

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/divider"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#259B24"
        android:paddingTop="15dp"
        android:layout_toRightOf="@id/item_icon"
        android:layout_below="@+id/divider"/>

    <TextView
        android:id="@+id/item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#607d8b"
        android:paddingTop="0dp"
        android:layout_toRightOf="@id/item_icon"
        android:layout_below="@id/item_name"/>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        android:background="@android:color/holo_green_light"
        android:layout_below="@id/item_icon"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/divider2"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/on_every_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            app:srcCompat="@mipmap/interval_icon"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/on_every_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/on_every_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="5dp"
            android:text="@string/on_every"
            android:textColor="#607d8b"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/on_every_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/on_every_title"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:textColor="#000000"
            android:text="06min"
            android:textSize="14sp"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <ImageView
            android:id="@+id/off_every_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/on_every_value"
            android:paddingLeft="10dp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            app:srcCompat="@mipmap/interval_icon"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/off_every_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/off_every_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="5dp"
            android:text="@string/off_every"
            android:textColor="#607d8b"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/off_every_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/off_every_title"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:textColor="#000000"
            android:text="06min"
            android:textSize="14sp"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <ImageView
            android:id="@+id/on_at_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/off_every_title"
            android:paddingLeft="10dp"
            android:paddingBottom="0dp"
            android:paddingTop="5dp"
            app:srcCompat="@mipmap/timer_icon"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/on_at_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/on_every_title"
            android:layout_toRightOf="@id/on_at_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="10dp"
            android:text="@string/on_at"
            android:textColor="#607d8b"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/on_at_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000"
            android:paddingTop="10dp"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@id/on_at_title"
            android:layout_below="@id/on_every_title"
            android:text="15:00, 16:00, 06:00"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <ImageView
            android:id="@+id/off_at_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/on_at_icon"
            android:paddingLeft="10dp"
            android:paddingBottom="0dp"
            android:paddingTop="5dp"
            app:srcCompat="@mipmap/timer_icon"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/off_at_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/on_at_title"
            android:layout_toRightOf="@id/off_at_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="10dp"
            android:text="@string/off_at"
            android:textColor="#607d8b"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/off_at_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@id/off_at_title"
            android:layout_below="@id/on_at_value"
            android:text="16:00, 17:00, 08:25"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <ImageView
            android:id="@+id/timer_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/off_every_value"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            app:srcCompat="@mipmap/timer_on_button"
            tools:ignore="ContentDescription,RtlSymmetry" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/details_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/horizon_dots"
        tools:ignore="ContentDescription,RtlSymmetry" />

</RelativeLayout>